# innowise_laboratory

./: books.db  main.py  pyproject.toml
lecture_2/: main.py
lecture_4/: main.py  queries.sql  school.db
lecture_5/book_api/: books.db  main.py
lecture_6/: Dockerfile  books.db  main.py  requirements.txt
