[project]
name = "pyproject-toml"
version = "0.1.0"
description = ""
authors = [
    {name = "Egor Pabtsevich",email = "09egorabtsevich@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)"
]

[tool.poetry]
packages = [{include = "pyproject"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
